RSKIP-535 - Addition of Base event in the BlockHeader (#3358)
* Initial commit creating the blockHeader extension for super event

More additions for the blockHeader addition

* Renaming superEvent to bridgeEvent

- Fixing sonar issues

* Small refactor to use correct names from RSKIP535

- Refactor the header name from bridgeEvent to baseEvent, as stated in RSKIP535
- Renaming the RSKIP481 to RSKIP535, which will be the one associated to this block extension
- Rebasing with newest master that has Vetiver release
- Configuring baseEvent from header getting from the Bridge Repository

* Some small refactor and tests additions

* Improving some tests

* Adding the baseEvent to the RPC response

* Addressing comments from review

* Fixing issues from linting

* Addressing some issues from sonar

* Fixing flaky test

* Addressing some comments from review

* Improve condition

* Set RSKIP535 as part of Vetiver

* Revert "Merge pull request #3414 from rsksmart/cleanup-activations"

This reverts commit 3306e5b17d4f494fc25dfa6b90d7906778ce9495, reversing
changes made to 7a29d4846add8f15424cea26649fd11954c8ae1c.

* Adding more test scenarios

* Refactor and some improvements in the classes

* Fix Java formatting issues for Spotless

* Addressing some other comments from the review.

---------

Co-authored-by: Nazaret Garcia <nazaret@rootstocklabs.com>
Co-authored-by: Marcos <marcos@rootstocklabs.com>
Co-authored-by: Marcos Irisarri <53787863+marcos-iov@users.noreply.github.com>